antlr3/src/main/java/alekseybykov/pets/parsers/antlr3/JavaParser.java
// $ANTLR 3.5.2 alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g 2024-01-04 16:57:12

	package alekseybykov.pets.parsers.antlr3;

	import alekseybykov.pets.parsers.models.JavaSource;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class JavaParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABSTRACT", "ALPHA", "ANNOTATION", 
		"ANY", "ASTERISK", "CLASS", "COMMA", "COMMENT", "DOT", "EXTENDS", "FINAL", 
		"IDENTIFIER", "IMPLEMENTS", "IMPORT", "INTERFACE", "IdentifierPart", "IdentifierStart", 
		"LINE_COMMENT", "NATIVE", "PACKAGE", "PRIVATE", "PROTECTED", "PUBLIC", 
		"SEMICOLON", "STATIC", "STRICTFP", "SYNCHRONIZED", "TRANSIENT", "VOLATILE", 
		"WS"
	};
	public static final int EOF=-1;
	public static final int ABSTRACT=4;
	public static final int ALPHA=5;
	public static final int ANNOTATION=6;
	public static final int ANY=7;
	public static final int ASTERISK=8;
	public static final int CLASS=9;
	public static final int COMMA=10;
	public static final int COMMENT=11;
	public static final int DOT=12;
	public static final int EXTENDS=13;
	public static final int FINAL=14;
	public static final int IDENTIFIER=15;
	public static final int IMPLEMENTS=16;
	public static final int IMPORT=17;
	public static final int INTERFACE=18;
	public static final int IdentifierPart=19;
	public static final int IdentifierStart=20;
	public static final int LINE_COMMENT=21;
	public static final int NATIVE=22;
	public static final int PACKAGE=23;
	public static final int PRIVATE=24;
	public static final int PROTECTED=25;
	public static final int PUBLIC=26;
	public static final int SEMICOLON=27;
	public static final int STATIC=28;
	public static final int STRICTFP=29;
	public static final int SYNCHRONIZED=30;
	public static final int TRANSIENT=31;
	public static final int VOLATILE=32;
	public static final int WS=33;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public JavaParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public JavaParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
		this.state.ruleMemo = new HashMap[58+1];


	}

	@Override public String[] getTokenNames() { return JavaParser.tokenNames; }
	@Override public String getGrammarFileName() { return "alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g"; }


		private JavaSource javaSource = new JavaSource();

	    public JavaSource getJavaSource() {
	        return javaSource;
	    }



	// $ANTLR start "compilationUnit"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:23:1: compilationUnit : ( packageDeclaration )? ( importDeclaration )* ( annotations )* ( typeDeclaration )* ( ANY )* ;
	public final void compilationUnit() throws RecognitionException {
		int compilationUnit_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:24:5: ( ( packageDeclaration )? ( importDeclaration )* ( annotations )* ( typeDeclaration )* ( ANY )* )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:24:9: ( packageDeclaration )? ( importDeclaration )* ( annotations )* ( typeDeclaration )* ( ANY )*
			{
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:24:9: ( packageDeclaration )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==PACKAGE) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:24:10: packageDeclaration
					{
					pushFollow(FOLLOW_packageDeclaration_in_compilationUnit60);
					packageDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:25:9: ( importDeclaration )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==IMPORT) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:25:10: importDeclaration
					{
					pushFollow(FOLLOW_importDeclaration_in_compilationUnit73);
					importDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop2;
				}
			}

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:26:9: ( annotations )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==ANNOTATION) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:26:10: annotations
					{
					pushFollow(FOLLOW_annotations_in_compilationUnit86);
					annotations();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop3;
				}
			}

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:27:9: ( typeDeclaration )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==ABSTRACT||LA4_0==CLASS||LA4_0==FINAL||LA4_0==INTERFACE||LA4_0==NATIVE||(LA4_0 >= PRIVATE && LA4_0 <= VOLATILE)) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:27:10: typeDeclaration
					{
					pushFollow(FOLLOW_typeDeclaration_in_compilationUnit99);
					typeDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop4;
				}
			}

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:28:3: ( ANY )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==ANY) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:28:3: ANY
					{
					match(input,ANY,FOLLOW_ANY_in_compilationUnit105); if (state.failed) return;
					}
					break;

				default :
					break loop5;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 1, compilationUnit_StartIndex); }

		}
	}
	// $ANTLR end "compilationUnit"



	// $ANTLR start "packageDeclaration"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:31:1: packageDeclaration : packageKeyword fullyQualifiedPackageName SEMICOLON ;
	public final void packageDeclaration() throws RecognitionException {
		int packageDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:32:5: ( packageKeyword fullyQualifiedPackageName SEMICOLON )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:32:9: packageKeyword fullyQualifiedPackageName SEMICOLON
			{
			pushFollow(FOLLOW_packageKeyword_in_packageDeclaration125);
			packageKeyword();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_fullyQualifiedPackageName_in_packageDeclaration127);
			fullyQualifiedPackageName();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_packageDeclaration137); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 2, packageDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "packageDeclaration"



	// $ANTLR start "importDeclaration"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:36:1: importDeclaration : importKeyword fullyQualifiedImportName SEMICOLON ;
	public final void importDeclaration() throws RecognitionException {
		int importDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:37:5: ( importKeyword fullyQualifiedImportName SEMICOLON )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:37:9: importKeyword fullyQualifiedImportName SEMICOLON
			{
			pushFollow(FOLLOW_importKeyword_in_importDeclaration156);
			importKeyword();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_fullyQualifiedImportName_in_importDeclaration158);
			fullyQualifiedImportName();
			state._fsp--;
			if (state.failed) return;
			match(input,SEMICOLON,FOLLOW_SEMICOLON_in_importDeclaration162); if (state.failed) return;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 3, importDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "importDeclaration"



	// $ANTLR start "annotations"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:41:1: annotations : ( ANNOTATION )+ ;
	public final void annotations() throws RecognitionException {
		int annotations_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:42:5: ( ( ANNOTATION )+ )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:42:9: ( ANNOTATION )+
			{
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:42:9: ( ANNOTATION )+
			int cnt6=0;
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==ANNOTATION) ) {
					int LA6_2 = input.LA(2);
					if ( (synpred6_JavaParser()) ) {
						alt6=1;
					}

				}

				switch (alt6) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:42:10: ANNOTATION
					{
					match(input,ANNOTATION,FOLLOW_ANNOTATION_in_annotations182); if (state.failed) return;
					}
					break;

				default :
					if ( cnt6 >= 1 ) break loop6;
					if (state.backtracking>0) {state.failed=true; return;}
					EarlyExitException eee = new EarlyExitException(6, input);
					throw eee;
				}
				cnt6++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 4, annotations_StartIndex); }

		}
	}
	// $ANTLR end "annotations"



	// $ANTLR start "typeDeclaration"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:45:1: typeDeclaration : ( classOrInterfaceDeclaration | SEMICOLON );
	public final void typeDeclaration() throws RecognitionException {
		int typeDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:46:5: ( classOrInterfaceDeclaration | SEMICOLON )
			int alt7=2;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==ABSTRACT||LA7_0==CLASS||LA7_0==FINAL||LA7_0==INTERFACE||LA7_0==NATIVE||(LA7_0 >= PRIVATE && LA7_0 <= PUBLIC)||(LA7_0 >= STATIC && LA7_0 <= VOLATILE)) ) {
				alt7=1;
			}
			else if ( (LA7_0==SEMICOLON) ) {
				alt7=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:46:9: classOrInterfaceDeclaration
					{
					pushFollow(FOLLOW_classOrInterfaceDeclaration_in_typeDeclaration203);
					classOrInterfaceDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:47:9: SEMICOLON
					{
					match(input,SEMICOLON,FOLLOW_SEMICOLON_in_typeDeclaration213); if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 5, typeDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "typeDeclaration"



	// $ANTLR start "classOrInterfaceDeclaration"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:50:1: classOrInterfaceDeclaration : ( classDeclaration | interfaceDeclaration );
	public final void classOrInterfaceDeclaration() throws RecognitionException {
		int classOrInterfaceDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:51:5: ( classDeclaration | interfaceDeclaration )
			int alt8=2;
			alt8 = dfa8.predict(input);
			switch (alt8) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:51:10: classDeclaration
					{
					pushFollow(FOLLOW_classDeclaration_in_classOrInterfaceDeclaration233);
					classDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:52:9: interfaceDeclaration
					{
					pushFollow(FOLLOW_interfaceDeclaration_in_classOrInterfaceDeclaration243);
					interfaceDeclaration();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 6, classOrInterfaceDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "classOrInterfaceDeclaration"



	// $ANTLR start "classDeclaration"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:55:1: classDeclaration : accessModifier classKeyword className ( extendsKeyword superClassName )? ( implementsKeyword interfaceNameList )? ;
	public final void classDeclaration() throws RecognitionException {
		int classDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:56:5: ( accessModifier classKeyword className ( extendsKeyword superClassName )? ( implementsKeyword interfaceNameList )? )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:56:9: accessModifier classKeyword className ( extendsKeyword superClassName )? ( implementsKeyword interfaceNameList )?
			{
			pushFollow(FOLLOW_accessModifier_in_classDeclaration262);
			accessModifier();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_classKeyword_in_classDeclaration264);
			classKeyword();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_className_in_classDeclaration266);
			className();
			state._fsp--;
			if (state.failed) return;
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:57:9: ( extendsKeyword superClassName )?
			int alt9=2;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==EXTENDS) ) {
				alt9=1;
			}
			switch (alt9) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:57:10: extendsKeyword superClassName
					{
					pushFollow(FOLLOW_extendsKeyword_in_classDeclaration277);
					extendsKeyword();
					state._fsp--;
					if (state.failed) return;
					pushFollow(FOLLOW_superClassName_in_classDeclaration279);
					superClassName();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:58:9: ( implementsKeyword interfaceNameList )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==IMPLEMENTS) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:58:10: implementsKeyword interfaceNameList
					{
					pushFollow(FOLLOW_implementsKeyword_in_classDeclaration292);
					implementsKeyword();
					state._fsp--;
					if (state.failed) return;
					pushFollow(FOLLOW_interfaceNameList_in_classDeclaration294);
					interfaceNameList();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 7, classDeclaration_StartIndex); }

		}
	}
	// $ANTLR end "classDeclaration"



	// $ANTLR start "accessModifier"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:61:1: accessModifier : ( publicKeyword | protectedKeyword | privateKeyword | staticKeyword | abstractKeyword | finalKeyword | nativeKeyword | synchronizedKeyword | transientKeyword | volatileKeyword | strictfpKeyword )* ;
	public final void accessModifier() throws RecognitionException {
		int accessModifier_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 8) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:62:5: ( ( publicKeyword | protectedKeyword | privateKeyword | staticKeyword | abstractKeyword | finalKeyword | nativeKeyword | synchronizedKeyword | transientKeyword | volatileKeyword | strictfpKeyword )* )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:63:5: ( publicKeyword | protectedKeyword | privateKeyword | staticKeyword | abstractKeyword | finalKeyword | nativeKeyword | synchronizedKeyword | transientKeyword | volatileKeyword | strictfpKeyword )*
			{
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:63:5: ( publicKeyword | protectedKeyword | privateKeyword | staticKeyword | abstractKeyword | finalKeyword | nativeKeyword | synchronizedKeyword | transientKeyword | volatileKeyword | strictfpKeyword )*
			loop11:
			while (true) {
				int alt11=12;
				switch ( input.LA(1) ) {
				case PUBLIC:
					{
					alt11=1;
					}
					break;
				case PROTECTED:
					{
					alt11=2;
					}
					break;
				case PRIVATE:
					{
					alt11=3;
					}
					break;
				case STATIC:
					{
					alt11=4;
					}
					break;
				case ABSTRACT:
					{
					alt11=5;
					}
					break;
				case FINAL:
					{
					alt11=6;
					}
					break;
				case NATIVE:
					{
					alt11=7;
					}
					break;
				case SYNCHRONIZED:
					{
					alt11=8;
					}
					break;
				case TRANSIENT:
					{
					alt11=9;
					}
					break;
				case VOLATILE:
					{
					alt11=10;
					}
					break;
				case STRICTFP:
					{
					alt11=11;
					}
					break;
				}
				switch (alt11) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:63:9: publicKeyword
					{
					pushFollow(FOLLOW_publicKeyword_in_accessModifier321);
					publicKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:64:9: protectedKeyword
					{
					pushFollow(FOLLOW_protectedKeyword_in_accessModifier331);
					protectedKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:65:9: privateKeyword
					{
					pushFollow(FOLLOW_privateKeyword_in_accessModifier341);
					privateKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:66:9: staticKeyword
					{
					pushFollow(FOLLOW_staticKeyword_in_accessModifier351);
					staticKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:67:9: abstractKeyword
					{
					pushFollow(FOLLOW_abstractKeyword_in_accessModifier361);
					abstractKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:68:9: finalKeyword
					{
					pushFollow(FOLLOW_finalKeyword_in_accessModifier371);
					finalKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 7 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:69:9: nativeKeyword
					{
					pushFollow(FOLLOW_nativeKeyword_in_accessModifier381);
					nativeKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 8 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:70:9: synchronizedKeyword
					{
					pushFollow(FOLLOW_synchronizedKeyword_in_accessModifier391);
					synchronizedKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 9 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:71:9: transientKeyword
					{
					pushFollow(FOLLOW_transientKeyword_in_accessModifier401);
					transientKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 10 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:72:9: volatileKeyword
					{
					pushFollow(FOLLOW_volatileKeyword_in_accessModifier411);
					volatileKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 11 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:73:9: strictfpKeyword
					{
					pushFollow(FOLLOW_strictfpKeyword_in_accessModifier421);
					strictfpKeyword();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop11;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 8, accessModifier_StartIndex); }

		}
	}
	// $ANTLR end "accessModifier"



	// $ANTLR start "className"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:77:1: className : classNameToken= IDENTIFIER ;
	public final void className() throws RecognitionException {
		int className_StartIndex = input.index();

		Token classNameToken=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 9) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:78:5: (classNameToken= IDENTIFIER )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:78:9: classNameToken= IDENTIFIER
			{
			classNameToken=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_className451); if (state.failed) return;
			if ( state.backtracking==0 ) {
			            javaSource.setClassSimpleName(classNameToken.getText());
			        }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 9, className_StartIndex); }

		}
	}
	// $ANTLR end "className"



	// $ANTLR start "superClassName"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:84:1: superClassName : superclassNameToken= IDENTIFIER ;
	public final void superClassName() throws RecognitionException {
		int superClassName_StartIndex = input.index();

		Token superclassNameToken=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 10) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:85:5: (superclassNameToken= IDENTIFIER )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:85:9: superclassNameToken= IDENTIFIER
			{
			superclassNameToken=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_superClassName484); if (state.failed) return;
			if ( state.backtracking==0 ) {
			            javaSource.setSuperclassSimpleName(superclassNameToken.getText());
			        }
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 10, superClassName_StartIndex); }

		}
	}
	// $ANTLR end "superClassName"



	// $ANTLR start "interfaceName"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:91:1: interfaceName : interfaceNameToken= IDENTIFIER ;
	public final void interfaceName() throws RecognitionException {
		int interfaceName_StartIndex = input.index();

		Token interfaceNameToken=null;

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 11) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:92:5: (interfaceNameToken= IDENTIFIER )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:92:9: interfaceNameToken= IDENTIFIER
			{
			interfaceNameToken=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_interfaceName517); if (state.failed) return;
			if ( state.backtracking==0 ) {
						javaSource.getInterfaces().add(interfaceNameToken.getText());
					}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 11, interfaceName_StartIndex); }

		}
	}
	// $ANTLR end "interfaceName"



	// $ANTLR start "interfaceNameList"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:98:1: interfaceNameList : interfaceName ( COMMA interfaceName )* ;
	public final void interfaceNameList() throws RecognitionException {
		int interfaceNameList_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 12) ) { return; }

			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:99:5: ( interfaceName ( COMMA interfaceName )* )
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:99:9: interfaceName ( COMMA interfaceName )*
			{
			pushFollow(FOLLOW_interfaceName_in_interfaceNameList546);
			interfaceName();
			state._fsp--;
			if (state.failed) return;
			// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:99:23: ( COMMA interfaceName )*
			loop12:
			while (true) {
				int alt12=2;
				int LA12_0 = input.LA(1);
				if ( (LA12_0==COMMA) ) {
					alt12=1;
				}

				switch (alt12) {
				case 1 :
					// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:99:24: COMMA interfaceName
					{
					match(input,COMMA,FOLLOW_COMMA_in_interfaceNameList549); if (state.failed) return;
					pushFollow(FOLLOW_interfaceName_in_interfaceNameList551);
					interfaceName();
					state._fsp--;
					if (state.failed) return;
					}
					break;

				default :
					break loop12;
				}
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			if ( state.backtracking>0 ) { memoize(input, 12, interfaceNameList_StartIndex); }

		}
	}
	// $ANTLR end "interfaceNameList"



	// $ANTLR start "interfaceDeclaration"
	// alekseybykov\\pets\\parsers\\antlr3\\JavaParser.g:102:1: interfaceDeclaration : normalInterfaceDeclaration ;
	public final void interfaceDeclaration() throws RecognitionException {
		int interfaceDeclaration_StartIndex = input.index();

		try {
			if ( state.backtracking>0 && alreadyParsedRule(input, 13) ) { return; }
